--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -314,11 +314,11 @@ background-color:#222222}
        <div class="grpelem" id="u4002"><!-- simple frame --></div>
       </div>
       <div class="clearfix colelem" id="pu3750"><!-- group -->
-       <a class="nonblock nontext shadow museBGSize grpelem" id="u3750" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.html','Website','700','600')"><!-- simple frame --></a>
+       <a class="nonblock nontext shadow museBGSize grpelem" id="u3750" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.blogspot.com.html','Website','700','600')"><!-- simple frame --></a>
        <a class="nonblock nontext shadow museBGSize grpelem" id="u3749" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.github.io.html','Website','700','600')"><!-- simple frame --></a>
-       <a class="nonblock nontext shadow museBGSize grpelem" id="u4349" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.html','Website','700','600')"><!-- simple frame --></a>
+       <a class="nonblock nontext shadow museBGSize grpelem" id="u4349" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.github.io.html','Website','700','600')"><!-- simple frame --></a>
       </div>
-      <a class="nonblock nontext shadow museBGSize colelem" id="u3748" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.html','Website','700','600')"><!-- simple frame --></a>
+      <a class="nonblock nontext shadow museBGSize colelem" id="u3748" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.tk.html','Website','700','600')"><!-- simple frame --></a>
      </div>
      <div class="grpelem" id="u3099"><!-- custom html -->
       <ul class="social-icons">
@@ -398,7 +398,7 @@ background-color:#222222}
 </div>
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
      <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-     <div class="clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+     <div class="rounded-corners clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <p><a class="nonblock" href="assets/milena_kiseleva.vcf">Download vCard</a></p>
      </div>
     </div>
@@ -421,7 +421,7 @@ background-color:#222222}
      </div>
      <div class="grpelem" id="u4279"><!-- simple frame --></div>
     </div>
-    <a class="nonblock nontext colelem" id="u4277" href="https://wordpress.org/plugins/my-custom-functions/" target="_blank" title="Open page in new tab"><!-- state-based BG images --></a>
+    <a class="nonblock nontext colelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- state-based BG images --></a>
     <div class="clearfix colelem" id="u4278-4"><!-- content -->
      <p>RSS Feed icon</p>
     </div>
