--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4104876600"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?59316394" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?17419584" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -299,10 +299,30 @@ background-color:#222222}
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="ppu1760-5"><!-- group -->
-     <div class="clearfix grpelem" id="pu1760-5"><!-- column -->
-      <div class="clearfix colelem" id="u1760-5"><!-- content -->
-       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1760-2"> You can check my online portfolio for projects I have completed.</span></p>
+    <div class="clearfix colelem" id="pppu1760-5"><!-- group -->
+     <div class="clearfix grpelem" id="ppu1760-5"><!-- column -->
+      <div class="clearfix colelem" id="pu1760-5"><!-- group -->
+       <div class="clearfix grpelem" id="u1760-5"><!-- content -->
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1760-2"> You can check my online portfolio for projects I have completed.</span></p>
+       </div>
+       <div class="grpelem" id="u4522"><!-- custom html -->
+        <script language="JavaScript">
+  /**
+   * Open centered pop-up window
+   *
+   * @param URL - specifies the URL of the page to open. If no URL is specified, a new window with about:blank will be opened
+   * @param windowName - specifies the target attribute or the name of the window (_blank, _parent, _self, _top, name)
+   * @param windowWidth - the window width in pixels (integer)
+   * @param windowHeight - the window height in pixels (integer)
+   */
+   function popUpWindow(URL, windowName, windowWidth, windowHeight) {
+	var centerLeft = (screen.width/2)-(windowWidth/2);
+	var centerTop = (screen.height/2)-(windowHeight/2);
+	var windowFeatures = 'toolbar=no, location=no, directories=no, status=no, menubar=no, titlebar=no, scrollbars=no, resizable=no, ';
+	return window.open(URL, windowName, windowFeatures +' width='+ windowWidth +', height='+ windowHeight +', top='+ centerTop +', left='+ centerLeft);
+   } 
+</script>
+</div>
       </div>
       <div class="clearfix colelem" id="pu3841-9"><!-- group -->
        <div class="clearfix grpelem" id="u3841-9"><!-- content -->
@@ -409,8 +429,8 @@ background-color:#222222}
       <p id="u3844-4">&nbsp;</p>
      </div>
      <a class="nonblock nontext shadow museBGSize grpelem" id="u3847" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons" target="_blank"><!-- simple frame --></a>
-     <a class="nonblock nontext shadow museBGSize grpelem" id="u3850" href="javascript:popUpWindow('http://www.arthurgareginyan.com/website-circuscostume.html','Website','700','600')" target="_blank" title="https://www.iconfinder.com/iconsets/different-genders"><!-- simple frame --></a>
-     <a class="nonblock nontext shadow museBGSize grpelem" id="u3853" href="javascript:popUpWindow('http://www.arthurgareginyan.com/website-circuscostume.html','Website','700','600')" target="_blank" title="https://www.iconfinder.com/iconsets/weather-liner"><!-- simple frame --></a>
+     <a class="nonblock nontext shadow museBGSize grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders" target="_blank"><!-- simple frame --></a>
+     <a class="nonblock nontext shadow museBGSize grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- simple frame --></a>
      <div class="grpelem" id="u4005"><!-- simple frame --></div>
     </div>
     <div class="clearfix colelem" id="pu4276-6"><!-- group -->
