--- a/about-me.html
+++ b/about-me.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4104876600"/>
-  <link rel="stylesheet" type="text/css" href="css/about-me.css?44314169" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-me.css?3837747532" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -337,7 +337,7 @@ background-color:#222222}
         <div class="clearfix colelem" id="pu3393"><!-- group -->
          <div class="grpelem" id="u3393"><!-- simple frame --></div>
          <div class="clearfix grpelem" id="u3399-7"><!-- content -->
-          <p><span id="u3399">Email:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class="nonblock" href="mailto:arthurgareginyan@gmail.com"><span class="Pink-Link" id="u3399-3">milavakiseleva@gmail.com</span></a></p>
+          <p><span id="u3399">Email:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class="nonblock" href="mailto:milavakiseleva@gmail.com"><span class="Pink-Link">milavakiseleva@gmail.com</span></a></p>
          </div>
         </div>
         <div class="clearfix colelem" id="pu3394"><!-- group -->
