--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4104876600"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?17419584" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4243115003" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -334,11 +334,11 @@ background-color:#222222}
        <div class="grpelem" id="u4002"><!-- simple frame --></div>
       </div>
       <div class="clearfix colelem" id="pu3750"><!-- group -->
-       <a class="nonblock nontext shadow museBGSize grpelem" id="u3750" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.blogspot.com.html','Website','700','600')"><!-- simple frame --></a>
-       <a class="nonblock nontext shadow museBGSize grpelem" id="u3749" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenarussianprincess.tk.html','Website','700','600')"><!-- simple frame --></a>
-       <a class="nonblock nontext shadow museBGSize grpelem" id="u4349" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.github.io.html','Website','700','600')"><!-- simple frame --></a>
+       <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3750" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.blogspot.com.html','Website','700','600')"><!-- group --><div class="clearfix grpelem" id="u4546-4"><!-- content --><p id="u4546-2">Milena Kiseleva - Blog</p></div></a>
+       <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3749" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenarussianprincess.tk.html','Website','700','600')"><!-- group --><div class="clearfix grpelem" id="u4549-4"><!-- content --><p id="u4549-2">Milena Russian Princess</p></div></a>
+       <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4349" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.github.io.html','Website','700','600')"><!-- group --><div class="clearfix grpelem" id="u4552-4"><!-- content --><p id="u4552-2">Milena Kiseleva - VCard</p></div></a>
       </div>
-      <a class="nonblock nontext shadow museBGSize colelem" id="u3748" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.tk.html','Website','700','600')"><!-- simple frame --></a>
+      <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u3748" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.tk.html','Website','700','600')"><!-- group --><div class="clearfix grpelem" id="u4555-4"><!-- content --><p id="u4555-2">Karolina Ray</p></div></a>
      </div>
      <div class="grpelem" id="u3099"><!-- custom html -->
       <ul class="social-icons">
@@ -428,23 +428,29 @@ background-color:#222222}
       <p id="u3844-3">&nbsp;</p>
       <p id="u3844-4">&nbsp;</p>
      </div>
-     <a class="nonblock nontext shadow museBGSize grpelem" id="u3847" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons" target="_blank"><!-- simple frame --></a>
-     <a class="nonblock nontext shadow museBGSize grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders" target="_blank"><!-- simple frame --></a>
-     <a class="nonblock nontext shadow museBGSize grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- simple frame --></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3847" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4558-4"><!-- content --><p id="u4558-2">Liner Multimedia Buttons</p></div></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4561-4"><!-- content --><p id="u4561-2">Different genders</p></div></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
      <div class="grpelem" id="u4005"><!-- simple frame --></div>
+    </div>
+    <div class="shadow museBGSize clearfix colelem" id="u4529"><!-- group -->
+     <div class="clearfix grpelem" id="u4567-4"><!-- content -->
+      <p id="u4567-2">Easter Egg's</p>
+     </div>
     </div>
     <div class="clearfix colelem" id="pu4276-6"><!-- group -->
      <div class="clearfix grpelem" id="u4276-6"><!-- content -->
-      <p id="u4276-2">Logo's / Icon</p>
+      <p id="u4276-2">Logo's and Single Icon's</p>
       <p id="u4276-3">&nbsp;</p>
       <p id="u4276-4">&nbsp;</p>
      </div>
      <div class="grpelem" id="u4279"><!-- simple frame --></div>
     </div>
-    <a class="nonblock nontext colelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- state-based BG images --></a>
+    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- group --><div class="clearfix grpelem" id="u4570-4"><!-- content --><p id="u4570-2">Icon for WordPress Plugin</p></div></a>
     <div class="clearfix colelem" id="u4278-4"><!-- content -->
-     <p>RSS Feed icon</p>
+     <p>WP Plugin &quot;RSS Feed Icon for SpecificFeeds.com&quot;</p>
     </div>
+    <div class="colelem" id="u4540"><!-- simple frame --></div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u3093"><!-- group -->
      <div class="clearfix grpelem" id="u3252-4"><!-- content -->
@@ -478,9 +484,6 @@ background-color:#222222}
 </div>
     </div>
    </div>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/rss-feed-u4277-r.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
