--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -11,7 +11,7 @@
   <title>contact-thanks</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4104876600"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?4121792085"/>
   <link rel="stylesheet" type="text/css" href="css/contact-thanks.css?145425561" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -379,7 +379,7 @@ background-color:#222222}
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
      <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
      <div class="clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
-      <p><a class="nonblock" href="assets/milena_kiseleva.vcf">Download vCard</a></p>
+      <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
      <div class="clearfix grpelem" id="u1289-10"><!-- content -->
       <p>Your message has been successfully sent. I will contact you as soon as possible.</p>
