--- a/website-milenakiseleva.github.io.html
+++ b/website-milenakiseleva.github.io.html
@@ -11,7 +11,7 @@
   <title>website-milenakiseleva.github.io</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_github_io.css?4201489931" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_github_io.css?3832402303" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -41,11 +41,11 @@ var __adobewebfontsappname__ = "muse";
      <p id="u1770-4">&nbsp;</p>
     </div>
     <div class="museBGSize colelem" id="u1672"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="u1669-10"><!-- content -->
+    <div class="clearfix colelem" id="u1669-13"><!-- content -->
      <p>&nbsp;</p>
      <p><span id="u1669-2">Date:</span> February, 2016</p>
      <p><span id="u1669-5">Technology:</span> Adobe Muse, Custom Theme, HTML, CSS, JavaScript, GitHub Pages</p>
-     <p>&nbsp;</p>
+     <p>Developed in conjunction with <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a></p>
     </div>
     <div class="verticalspacer"></div>
    </div>
