--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
   <title>404</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4121792085"/>
-  <link rel="stylesheet" type="text/css" href="css/404.css?237298132" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?219339304"/>
+  <link rel="stylesheet" type="text/css" href="css/404.css?4290449495" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_404.css?230181470"/>
@@ -314,47 +314,47 @@ background-color:#222222}
       <ul class="social-icons">
 	<li>
 		<a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/facebook.png" alt="Facebook" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/facebook.png" alt="Facebook" />
 		</a>
 	</li>
 	<li>
 		<a href="https://twitter.com/@milavakiseleva" title="Twitter" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/twitter.png" alt="Twitter" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/twitter.png" alt="Twitter" />
 		</a>
 	</li>
 	<li>
 		<a href="http://instagram.com/milava_kiseleva" title="Instagram" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/instagram.png" alt="Instagram" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/instagram.png" alt="Instagram" />
 		</a>
 	</li>
 	<li>
 		<a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target='blank'>
-			<img src="//arthurgareginyan.com/social-media-icons/google-plus.png" alt="Google+" />
+			<img src="//milenakiseleva.github.io/social-media-icons/google-plus.png" alt="Google+" />
 		</a>
 	</li>
 	<li>
 		<a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/youtube.png" alt="YouTube" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/youtube.png" alt="YouTube" />
 		</a>
 	</li>
 	<li>
 		<a href="http://milenakiseleva.blogspot.ru" title="Blogger" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/blogger.png" alt="Blogger" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/blogger.png" alt="Blogger" />
 		</a>
 	</li>
 	<li>
 		<a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/linkedin.png" alt="Linkedin" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/linkedin.png" alt="Linkedin" />
 		</a>
 	</li>
 	<li>
 		<a href="https://github.com/MilenaKiseleva" title="Github" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/github.png" alt="Github" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/github.png" alt="Github" />
 		</a>
 	</li>
 	<li>
 		<a href="mailto:milavakiseleva@gmail.com?subject=Message from milenakiseleva.github.io" title="Mail" target='blank'>
-			<img src="http://arthurgareginyan.com/social-media-icons/email.png" alt="Mail" />
+			<img src="http://milenakiseleva.github.io/social-media-icons/email.png" alt="Mail" />
 		</a>
 	</li>
 </ul>
