--- a/website-milenarussianprincess.tk.html
+++ b/website-milenarussianprincess.tk.html
@@ -11,7 +11,7 @@
   <title>website-milenarussianprincess.tk</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenarussianprincess_tk.css?3780049162" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenarussianprincess_tk.css?4036879848" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -38,10 +38,12 @@ var __adobewebfontsappname__ = "muse";
      <p id="u4342-4">&nbsp;</p>
     </div>
     <div class="museBGSize colelem" id="u4345"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="u4343-10"><!-- content -->
+    <div class="clearfix colelem" id="u4343-15"><!-- content -->
      <p>&nbsp;</p>
      <p><span id="u4343-2">Date:</span> 2013</p>
      <p><span id="u4343-5">Technology:</span> WordPress, Custom Theme, HTML, CSS</p>
+     <p>&nbsp;</p>
+     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan.</a></p>
      <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
