--- a/website-karolinaray.tk.html
+++ b/website-karolinaray.tk.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "website-karolinaray_tk.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "website-karolinaray_tk.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,7 +11,7 @@
   <title>website-karolinaray.tk</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-karolinaray_tk.css?97402927" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-karolinaray_tk.css?4166779310" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -21,9 +21,6 @@ var __adobewebfontsappname__ = "muse";
   <script type="text/javascript">
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/bitter:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
-  <!--[if lt IE 9]>
-  <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
-  <![endif]-->
     <!--custom head HTML-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  </head>
@@ -41,10 +38,12 @@ var __adobewebfontsappname__ = "muse";
      <p>&nbsp;</p>
     </div>
     <div class="museBGSize colelem" id="u1723"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="u1722-10"><!-- content -->
+    <div class="clearfix colelem" id="u1722-16"><!-- content -->
      <p>&nbsp;</p>
      <p><span id="u1722-2">Date:</span> June, 2013</p>
      <p><span id="u1722-5">Technology:</span> CMS WordPress, PHP, HTML, CSS, JavaScript, MySQL</p>
+     <p>&nbsp;</p>
+     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a>.</p>
      <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
