--- a/website-milenakiseleva.github.io.html
+++ b/website-milenakiseleva.github.io.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "website-milenakiseleva_github_io.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "website-milenakiseleva_github_io.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,7 +11,7 @@
   <title>website-milenakiseleva.github.io</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_github_io.css?3832402303" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_github_io.css?353577828" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -21,9 +21,6 @@ var __adobewebfontsappname__ = "muse";
   <script type="text/javascript">
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/bitter:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
-  <!--[if lt IE 9]>
-  <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
-  <![endif]-->
     <!--custom head HTML-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  </head>
@@ -41,11 +38,13 @@ var __adobewebfontsappname__ = "muse";
      <p id="u1770-4">&nbsp;</p>
     </div>
     <div class="museBGSize colelem" id="u1672"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="u1669-13"><!-- content -->
+    <div class="clearfix colelem" id="u1669-16"><!-- content -->
      <p>&nbsp;</p>
-     <p><span id="u1669-2">Date:</span> February, 2016</p>
-     <p><span id="u1669-5">Technology:</span> Adobe Muse, Custom Theme, HTML, CSS, JavaScript, GitHub Pages</p>
-     <p>Developed in conjunction with <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a></p>
+     <p><span id="u1669-2">Date: </span>March, 2016</p>
+     <p><span id="u1669-5">Technology:</span> Adobe Muse, GitHub Pages, Custom Design, Custom Widgets, HTML, CSS, JavaScript</p>
+     <p>&nbsp;</p>
+     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a>.</p>
+     <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
    </div>
