--- a/website-karolinaray.tk.html
+++ b/website-karolinaray.tk.html
@@ -11,7 +11,7 @@
   <title>website-karolinaray.tk</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-karolinaray_tk.css?4166779310" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-karolinaray_tk.css?196254603" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -43,7 +43,7 @@ var __adobewebfontsappname__ = "muse";
      <p><span id="u1722-2">Date:</span> June, 2013</p>
      <p><span id="u1722-5">Technology:</span> CMS WordPress, PHP, HTML, CSS, JavaScript, MySQL</p>
      <p>&nbsp;</p>
-     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a>.</p>
+     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u1722-10">Arthur Gareginyan</span></a>.</p>
      <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
