--- a/website-milenakiseleva.blogspot.com.html
+++ b/website-milenakiseleva.blogspot.com.html
@@ -11,7 +11,7 @@
   <title>website-milenakiseleva.blogspot.com</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_blogspot_com.css?3989799665" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_blogspot_com.css?3778541206" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -43,7 +43,7 @@ var __adobewebfontsappname__ = "muse";
     <p><span id="u1685-5">Redesign:</span> August 2013. Website redesigned and moved to CMS Blogger.</p>
     <p><span id="u1685-8">Technology:</span> CMS Blogger, Custom Theme, HTML, CSS</p>
     <p>&nbsp;</p>
-    <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a>.</p>
+    <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u1685-13">Arthur Gareginyan</span></a>.</p>
     <p>&nbsp;</p>
    </div>
    <div class="verticalspacer"></div>
