--- a/website-milenakiseleva.github.io.html
+++ b/website-milenakiseleva.github.io.html
@@ -11,7 +11,7 @@
   <title>website-milenakiseleva.github.io</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_github_io.css?353577828" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_github_io.css?3812442214" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -43,7 +43,7 @@ var __adobewebfontsappname__ = "muse";
      <p><span id="u1669-2">Date: </span>March, 2016</p>
      <p><span id="u1669-5">Technology:</span> Adobe Muse, GitHub Pages, Custom Design, Custom Widgets, HTML, CSS, JavaScript</p>
      <p>&nbsp;</p>
-     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank">Arthur Gareginyan</a>.</p>
+     <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u1669-10">Arthur Gareginyan</span></a>.</p>
      <p>&nbsp;</p>
     </div>
     <div class="verticalspacer"></div>
