--- a/website-milenakiseleva.blogspot.com.html
+++ b/website-milenakiseleva.blogspot.com.html
@@ -11,7 +11,7 @@
   <title>website-milenakiseleva.blogspot.com</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_blogspot_com.css?3778541206" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenakiseleva_blogspot_com.css?3987955744" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -33,17 +33,16 @@ var __adobewebfontsappname__ = "muse";
    </div>
    <div class="clearfix colelem" id="u1777-6"><!-- content -->
     <p>&nbsp;</p>
-    <p>Creation website-blog for me.</p>
+    <p>Previously I had a blog, but in January of 2013 I decided to redesign it and move it to CMS Blogger.</p>
     <p>&nbsp;</p>
    </div>
    <div class="museBGSize colelem" id="u1686"><!-- simple frame --></div>
-   <div class="clearfix colelem" id="u1685-19"><!-- content -->
+   <div class="clearfix colelem" id="u1685-16"><!-- content -->
     <p>&nbsp;</p>
-    <p><span id="u1685-2">Date:</span> Mid 2013</p>
-    <p><span id="u1685-5">Redesign:</span> August 2013. Website redesigned and moved to CMS Blogger.</p>
-    <p><span id="u1685-8">Technology:</span> CMS Blogger, Custom Theme, HTML, CSS</p>
+    <p><span id="u1685-2">Date:</span> August, 2013</p>
+    <p><span id="u1685-5">Technology:</span> CMS Blogger, Custom Theme, HTML, CSS</p>
     <p>&nbsp;</p>
-    <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u1685-13">Arthur Gareginyan</span></a>.</p>
+    <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u1685-10">Arthur Gareginyan</span></a>.</p>
     <p>&nbsp;</p>
    </div>
    <div class="verticalspacer"></div>
