--- a/website-milenarussianprincess.tk.html
+++ b/website-milenarussianprincess.tk.html
@@ -11,7 +11,7 @@
   <title>website-milenarussianprincess.tk</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/website-milenarussianprincess_tk.css?445271727" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/website-milenarussianprincess_tk.css?4167242807" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -34,13 +34,13 @@ var __adobewebfontsappname__ = "muse";
     </div>
     <div class="clearfix colelem" id="u4342-6"><!-- content -->
      <p>&nbsp;</p>
-     <p id="u4342-3">Creation website for me. It was my first website :)</p>
+     <p id="u4342-3">Creation website for me. It was my first website designed by me :)</p>
      <p id="u4342-4">&nbsp;</p>
     </div>
     <div class="museBGSize colelem" id="u4345"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u4343-16"><!-- content -->
      <p>&nbsp;</p>
-     <p><span id="u4343-2">Date:</span> 2013</p>
+     <p><span id="u4343-2">Date:</span> January, 2013</p>
      <p><span id="u4343-5">Technology:</span> WordPress, Custom Theme, HTML, CSS</p>
      <p>&nbsp;</p>
      <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u4343-10">Arthur Gareginyan</span>.</a></p>
