--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -11,8 +11,8 @@
   <title>contact-thanks</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4086973887"/>
-  <link rel="stylesheet" type="text/css" href="css/contact-thanks.css?3859795518" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?406973325"/>
+  <link rel="stylesheet" type="text/css" href="css/contact-thanks.css?104681566" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -27,6 +27,15 @@ var __adobewebfontsappname__ = "muse";
   <![endif]-->
     <!--custom head HTML-->
   <meta name="google-site-verification" content="yvTrq0gQfgmboXjJKrrLX9tOh-EkN_ECRm2_IEYmBe8" />
+<link rel='author' href='https://plus.google.com/+MilenaKiseleva/'>
+<meta name='article:publisher' content='https://www.facebook.com/milenarussianprincess' />
+<meta name='twitter:site' content='@milavakiseleva' />
+<meta name='twitter:creator' content='@milavakiseleva' />
+<meta name='author' content='Milena Kiseleva' />
+<meta name='designer' content='Milena Kiseleva' />
+<meta name='contact' content='milavakiseleva@gmail.com' />
+<meta name='copyright' content='Copyright (c) 2016 Milena Kiseleva. All Rights Reserved.' />
+<meta name='keywords' content='Milena Kiseleva, Milena Russian Princess, Милена Киселёва, Киселёва Милена,' />
   <!--HTML Widget code-->
   
        <style>
