--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
   <title>404</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4086973887"/>
-  <link rel="stylesheet" type="text/css" href="css/404.css?4290449495" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?406973325"/>
+  <link rel="stylesheet" type="text/css" href="css/404.css?237298132" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_404.css?230181470"/>
@@ -31,6 +31,15 @@ var __adobewebfontsappname__ = "muse";
   <![endif]-->
     <!--custom head HTML-->
   <meta name="google-site-verification" content="yvTrq0gQfgmboXjJKrrLX9tOh-EkN_ECRm2_IEYmBe8" />
+<link rel='author' href='https://plus.google.com/+MilenaKiseleva/'>
+<meta name='article:publisher' content='https://www.facebook.com/milenarussianprincess' />
+<meta name='twitter:site' content='@milavakiseleva' />
+<meta name='twitter:creator' content='@milavakiseleva' />
+<meta name='author' content='Milena Kiseleva' />
+<meta name='designer' content='Milena Kiseleva' />
+<meta name='contact' content='milavakiseleva@gmail.com' />
+<meta name='copyright' content='Copyright (c) 2016 Milena Kiseleva. All Rights Reserved.' />
+<meta name='keywords' content='Milena Kiseleva, Milena Russian Princess, Милена Киселёва, Киселёва Милена,' />
   <!--HTML Widget code-->
   
        <style>
