--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?406973325"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?255697012" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4241683581" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -429,7 +429,7 @@ background-color:#222222}
 </div>
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
      <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-     <div class="pointer_cursor clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+     <div class="pointer_cursor rounded-corners clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
@@ -445,9 +445,14 @@ background-color:#222222}
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
      <div class="grpelem" id="u4005"><!-- simple frame --></div>
     </div>
-    <div class="shadow museBGSize clearfix colelem" id="u4529"><!-- group -->
-     <div class="clearfix grpelem" id="u4567-4"><!-- content -->
-      <p id="u4567-2">Easter Egg's</p>
+    <div class="clearfix colelem" id="pu4529"><!-- group -->
+     <div class="shadow museBGSize clearfix grpelem" id="u4529"><!-- group -->
+      <div class="clearfix grpelem" id="u4567-4"><!-- content -->
+       <p id="u4567-2">Easter Egg's</p>
+      </div>
+     </div>
+     <div class="shadow museBGSize clearfix grpelem" id="u4608"><!-- group -->
+      <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
      </div>
     </div>
     <div class="clearfix colelem" id="pu4276-6"><!-- group -->
