--- a/portfolio.html
+++ b/portfolio.html
@@ -452,7 +452,7 @@ background-color:#222222}
       </div>
      </div>
      <div class="shadow museBGSize clearfix grpelem" id="u4608"><!-- group -->
-      <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner" target="_blank"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
      </div>
     </div>
     <div class="clearfix colelem" id="pu4276-6"><!-- group -->
