--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "resume.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "resume.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,11 +11,11 @@
   <title>RESUME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?406973325"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?3787225604" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?289682006"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?7065310" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?22818333"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?449681745"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -306,11 +306,11 @@ background-color:#222222}
       <div class="MenuItemContainer clearfix grpelem" id="u3155"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3156" href="portfolio.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3158-4"><!-- content --><p>PORTFOLIO</p></div></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
       </div>
      </nav>
     </div>
@@ -397,33 +397,69 @@ background-color:#222222}
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
-     <div class="clearfix grpelem" id="u1253-33"><!-- content -->
+     <div class="clearfix grpelem" id="u1253-39"><!-- content -->
       <p id="u1253-2">MILENA KISELEVA</p>
       <p id="u1253-4">Moscow, Russia, 141033</p>
       <p id="u1253-6">milavakiseleva@gmail.com</p>
       <p id="u1253-7">&nbsp;</p>
-      <p id="u1253-8">&nbsp;</p>
-      <p id="u1253-9">&nbsp;</p>
-      <p id="u1253-11">Professional Experience</p>
-      <p id="u1253-12">&nbsp;</p>
-      <p id="u1253-13">&nbsp;</p>
+      <p id="u1253-9">Profile</p>
+      <p id="u1253-10">&nbsp;</p>
+      <p id="u1253-11">&nbsp;</p>
+      <p id="u1253-13">Professional Experience</p>
       <p id="u1253-14">&nbsp;</p>
-      <p id="u1253-16">Education</p>
-      <p id="u1253-17">&nbsp;</p>
-      <p id="u1253-21">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1253-19">Moscow State Regional University (MSRU)</span><span id="u1253-20">, Moscow, Russia</span></p>
-      <p id="u1253-24">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1253-23">The Faculty of Psychology, (2004 – 2005 year)</span></p>
-      <p id="u1253-25">&nbsp;</p>
+      <p id="u1253-15">&nbsp;</p>
+      <p id="u1253-17">Education</p>
+      <p id="u1253-18">&nbsp;</p>
+      <p id="u1253-22">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1253-20">Moscow State Regional University (MSRU)</span><span id="u1253-21">, Moscow, Russia</span></p>
+      <p id="u1253-25">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1253-24">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
       <p id="u1253-26">&nbsp;</p>
       <p id="u1253-27">&nbsp;</p>
-      <p id="u1253-29">Additional Skills</p>
+      <p id="u1253-29">Areas of Expertise</p>
       <p id="u1253-30">&nbsp;</p>
-      <p id="u1253-31">&nbsp;</p>
+      <p id="u1253-32">Additional Skills</p>
+      <p id="u1253-33">&nbsp;</p>
+      <p id="u1253-35">Diplomas</p>
+      <p id="u1253-36">&nbsp;</p>
+      <p id="u1253-37">&nbsp;</p>
+     </div>
+    </div>
+    <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu4628"><!-- none box -->
+     <div class="popup_anchor" id="u4651popup">
+      <div class="SlideShowContentPanel rgba-background clearfix" id="u4651"><!-- stack box -->
+       <div class="SSSlide clip_frame grpelem" id="u4652"><!-- image -->
+        <img class="block ImageInclude" id="u4652_img" data-src="images/2004.jpg" src="images/blank.gif" alt="" data-width="534" data-height="755"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u4631popup">
+      <div class="SSSlideLinks clearfix" id="u4631"><!-- horizontal-rows box -->
+       <div class="SSSlideLink clip_frame grpelem" id="u4638"><!-- image -->
+        <img class="block" id="u4638_img" src="images/2004178x251.jpg" alt="" width="177" height="251"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u4650-4popup">
+      <div class="SSPreviousButton clearfix" id="u4650-4"><!-- content -->
+       <p>&lt;</p>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u4663-4popup">
+      <div class="SSNextButton clearfix" id="u4663-4"><!-- content -->
+       <p>&gt;</p>
+      </div>
+     </div>
+     <div class="popup_anchor">
+      <div class="SSCloseButton popup_element clearfix" id="u4642"><!-- group -->
+       <div class="clearfix grpelem" id="u4643-4"><!-- content -->
+        <p>x</p>
+       </div>
+      </div>
      </div>
     </div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u3093"><!-- group -->
-     <div class="clearfix grpelem" id="u3252-4"><!-- content -->
-      <p>© 2016 · Milena Kiseleva | Design by Milena Kiseleva</p>
+     <div class="clearfix grpelem" id="u3252-6"><!-- content -->
+      <p>© 2016 · Milena Kiseleva | Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-2">Arthur Gareginyan</span></a></p>
      </div>
      <div class="grpelem" id="u4305"><!-- custom html -->
       
@@ -464,6 +500,10 @@ background-color:#222222}
   <script src="scripts/museutils.js?531812214" type="text/javascript"></script>
   <script src="scripts/whatinput.js?84559013" type="text/javascript"></script>
   <script src="scripts/jquery.musemenu.js?3902934130" type="text/javascript"></script>
+  <script src="scripts/webpro.js?4156477058" type="text/javascript"></script>
+  <script src="scripts/musewpslideshow.js?4058618124" type="text/javascript"></script>
+  <script src="scripts/jquery.museoverlay.js?3810062583" type="text/javascript"></script>
+  <script src="scripts/touchswipe.js?4174436727" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?3866665977" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -475,6 +515,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('#slideshowu4628', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:3000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:true,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu4628 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 } catch(e) { if (e && 'function' == typeof e.notify) e.notify(); else Muse.Assert.fail('Error calling selector function:' + e); }});
