--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,8 @@
   <title>ABOUT ME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?406973325"/>
-  <link rel="stylesheet" type="text/css" href="css/about-me.css?531160728" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?289682006"/>
+  <link rel="stylesheet" type="text/css" href="css/about-me.css?4143345669" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -303,11 +303,11 @@ background-color:#222222}
       <div class="MenuItemContainer clearfix grpelem" id="u3155"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3156" href="portfolio.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3158-4"><!-- content --><p>PORTFOLIO</p></div></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
       </div>
      </nav>
     </div>
@@ -359,14 +359,13 @@ background-color:#222222}
         </div>
        </div>
       </div>
-      <div class="clearfix colelem" id="pu1290-11"><!-- group -->
-       <div class="clearfix grpelem" id="u1290-11"><!-- content -->
-        <p id="u1290-2">Hello, My name is Milena. I'm a self employed web designer from Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people.</p>
+      <div class="clearfix colelem" id="pu1290-9"><!-- group -->
+       <div class="clearfix grpelem" id="u1290-9"><!-- content -->
+        <p id="u1290-2">Hello, My name is Milena. I'm a self employed web designer from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people. I love to use Adobe Illustrator, Adobe Photoshop and Adobe Muse for creating amazing things.</p>
         <p id="u1290-3">&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
-        <p id="u1290-7">I love Adobe Illustrator, Adobe Photoshop and Adobe Muse.</p>
-        <p id="u1290-9">I love use Final Cut Pro X, because I make vlog about my live, on YouTube.</p>
+        <p id="u1290-7">I love use Final Cut Pro X, because I make vlog about my live, on YouTube.</p>
        </div>
        <img class="grpelem" id="u3738-4" alt="♥ ♥ ♥" width="88" height="23" src="images/u3738-4.png"/><!-- rasterized frame -->
       </div>
@@ -473,8 +472,8 @@ background-color:#222222}
 </div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u3093"><!-- group -->
-     <div class="clearfix grpelem" id="u3252-4"><!-- content -->
-      <p>© 2016 · Milena Kiseleva | Design by Milena Kiseleva</p>
+     <div class="clearfix grpelem" id="u3252-6"><!-- content -->
+      <p>© 2016 · Milena Kiseleva | Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-2">Arthur Gareginyan</span></a></p>
      </div>
      <div class="grpelem" id="u4305"><!-- custom html -->
       
