--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,8 +11,8 @@
   <title>Privacy Policy</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?406973325"/>
-  <link rel="stylesheet" type="text/css" href="css/privacy-policy.css?88946744" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?289682006"/>
+  <link rel="stylesheet" type="text/css" href="css/privacy-policy.css?19093850" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -302,11 +302,11 @@ background-color:#222222}
       <div class="MenuItemContainer clearfix grpelem" id="u3155"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3156" href="portfolio.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3158-4"><!-- content --><p>PORTFOLIO</p></div></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
       </div>
      </nav>
     </div>
@@ -429,8 +429,8 @@ background-color:#222222}
     </div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u3093"><!-- group -->
-     <div class="clearfix grpelem" id="u3252-4"><!-- content -->
-      <p>© 2016 · Milena Kiseleva | Design by Milena Kiseleva</p>
+     <div class="clearfix grpelem" id="u3252-6"><!-- content -->
+      <p>© 2016 · Milena Kiseleva | Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-2">Arthur Gareginyan</span></a></p>
      </div>
      <div class="grpelem" id="u4305"><!-- custom html -->
       
